# sima-visualizer

./: .gitignore  .gitmodules  README.md  pyproject.toml  sweep_local.py
sima_visualizer/: __init__.py  __main__.py  analyze.py  emit.py  resolve.py
sima_visualizer/hosts/: __init__.py  cam_sima.py
sima_visualizer/viewer/: template.html  viewer.css  viewer.js
