[project]
name = "sima-visualizer"
version = "0.1.0"
description = "Visualize quantity flow through CCPP physics suites (CAM-SIMA / atmospheric_physics)"
requires-python = ">=3.9"

[project.scripts]
sima-viz = "sima_visualizer.__main__:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sima_visualizer*"]
